--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -15,12 +15,21 @@
 
     <!--javascript file-->
     <script src="app/app.js"></script>
-    <script src="app/routs.js"></script>
+    <script src="app/router.js"></script>
     <script src="app/album.ctrl.js"></script>
+    <script src="app/news.ctrl.js"></script>
+    <script src="app/main.ctrl.js"></script>
 
 
 </head>
 <body>
+<p><a href="#/">Main</a></p>
+
+<p><a href="#/album">Album</a></p>
+<p><a href="#/news">News</a></p>
+
+
+
 <div ui-view=""></div>
 </body>
 </html>
