--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -13,23 +13,31 @@
 
 
 
+
+
     <!--javascript file-->
     <script src="app/app.js"></script>
     <script src="app/router.js"></script>
     <script src="app/album.ctrl.js"></script>
     <script src="app/news.ctrl.js"></script>
     <script src="app/main.ctrl.js"></script>
+    
 
 
 </head>
 <body>
-<p><a href="#/">Main</a></p>
-
-<p><a href="#/album">Album</a></p>
-<p><a href="#/news">News</a></p>
-
+<nav>
+    <ul>
+        <li><a href="#/">Main</a></li>
+        <li><a href="#album">Album</a></li>
+        <li><a href="#news">News</a></li>
+    </ul>
+</nav>
 
 
 <div ui-view=""></div>
+
+
+
 </body>
 </html>
