--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -21,7 +21,7 @@
     <script src="app/album.ctrl.js"></script>
     <script src="app/news.ctrl.js"></script>
     <script src="app/main.ctrl.js"></script>
-    
+    <script type="text/javascript" src="https://cdn.rawgit.com/adonespitogo/angular-base64-upload/master/src/angular-base64-upload.js"></script>
 
 
 </head>
